Bug fix for the overflowing Footer element

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -359,6 +359,7 @@ select {
   height:70px;
   bottom:0;
   left:0;
+  position:absolute;
   background-color: #5A0206;
 }
 
@@ -405,3 +406,6 @@ select {
   height: 900px;
 }
 
+#content {
+  padding-bottom: 70px; 
+}
